[package]
name = "detect-lang"
version = "0.1.2"
authors = ["Christian Vallentin"]
edition = "2018"
description = "Language detection given paths and extensions"
keywords = ["language", "language-name", "lang-id", "path", "extension"]
categories = ["algorithms"]
license = "MIT"
repository = "https://github.com/vallentin/detect-lang"
homepage = "https://github.com/vallentin/detect-lang"
documentation = "https://docs.rs/detect_lang"
readme = "README.md"
exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "vallentin/detect-lang" }

[dependencies]
