[package]
name = "detect-lang"
version = "0.1.5"
authors = ["Christian Vallentin"]
edition = "2018"
description = "Language detection given paths and extensions"
keywords = ["language", "language-name", "lang-id", "path", "extension"]
categories = ["algorithms"]
license = "MIT"
repository = "https://github.com/vallentin/detect-lang"
documentation = "https://docs.rs/detect-lang"
readme = "README.md"
exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "vallentin/detect-lang" }

[dependencies]
